Update SimpleJDBC.java